--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 * {outline:none !important;}
 body {
   color:#525252;
-  background:#436E90;
+  background:#353535;
 }
 .body-expanded, .modal-open {
   overflow-y:hidden;
@@ -20,15 +20,15 @@ h1, .h1, h2, .h2, h3, .h3 {
 
 #logo {
   position:relative;
-  background:#dbdbdb;
+  background:#505559;
 }
 #logo a {
-  color: #525252;
+  color: #D8D8D8;
 font-family: "Righteous",cursive;
 display: block;
 font-size: 20px;
 line-height: 50px;
-  background: url(../img/logo.png) right 42px no-repeat;
+  /*background: url(../img/logo.png) right 42px no-repeat;*/
   -webkit-transition: 0.5s;
   -moz-transition: 0.5s;
   -o-transition: 0.5s;
@@ -57,7 +57,7 @@ line-height: 50px;
 a.show-sidebar {
   float: left;
   margin-left: 15px;
-  color:#f0f0f0;
+  color:#9B9B9B;
   outline: none;
   -webkit-transition: 0.2s;
   -moz-transition: 0.2s;
@@ -65,14 +65,14 @@ a.show-sidebar {
   transition: 0.2s;
 }
 a.show-sidebar:hover {
-  color:#f5f5f5;
+  color:#A8A8A8;
 }
 #sidebar-left {
   position:relative;
   z-index: inherit;
   padding-bottom: 3000px !important;
   margin-bottom: -3000px !important;
-  background:#436E90;
+  background:#353535;
   -webkit-transition: 0.1s;
   -moz-transition: 0.1s;
   -o-transition: 0.1s;
@@ -101,7 +101,7 @@ a.show-sidebar:hover {
 }
 .nav.main-menu > li > a, .nav.msg-menu > li > a {
   text-align: center;
-  color:#f0f0f0;
+  color:#9C9A78;
   min-height: 40px;
   -webkit-transition: 0.05s;
   -moz-transition: 0.05s;
@@ -173,7 +173,7 @@ a.show-sidebar:hover {
 #top-panel {
   line-height: 50px;
   height: 50px;
-  background:#dbdbdb;
+  background:#505559;
 }
 #main {
   margin-top: 50px;
@@ -235,7 +235,7 @@ a.show-sidebar:hover {
   margin-top: 8px;
   padding: 5px;
   font-size: 20px;
-  color: #436E90;
+  color: #9C9A78;
   line-height: 1em;
   vertical-align: top;
   -webkit-transition: 0.05s;
@@ -251,18 +251,14 @@ a.show-sidebar:hover {
   background: none !important;
 }
 .panel-menu .badge {
-  background: none repeat scroll 0 0 #e84e40;
-  border-radius: 50%;
-  color: #fff;
-  margin-top: 5px;
+  margin-top:5px;
   padding: 3px 6px;
-  font-size: 11px;
-  height: 15px;
-  width: 17px;
   vertical-align: top;
-  text-align: center;
+  border-radius: 2px;
+  background:none;
+  color: #45837A;
+  border: 1px solid #45837A;
 }
-
 .avatar {
   width: 40px;
   float: left;
@@ -275,7 +271,7 @@ a.show-sidebar:hover {
 .user-mini > span {
   display: block;
   font-size: 12px;
-  color:#436E90;
+  color:#AA8383;
   margin-bottom: -4px;
 }
 .user-mini > span.welcome {
@@ -293,7 +289,7 @@ a.show-sidebar:hover {
 }
 .panel-menu .dropdown-menu > li > a {
   padding:5px 10px !important;
-  color:#f0f0f0;
+  color:#9C9A78;
 }
 .panel-menu .dropdown-menu > li > a > i {
   border: 0;
@@ -592,7 +588,7 @@ ul.DTTT_dropdown.dropdown-menu > li:hover > a {
 #breadcrumb {
   padding: 0;
   line-height: 40px;
-  background: #436E90;
+  background: #353535;
   margin-bottom: 30px;
 }
 .breadcrumb {
@@ -836,42 +832,42 @@ ul.DTTT_dropdown.dropdown-menu > li:hover > a {
 .txt-default {color: #D8D8D8;}
 .progress-bar-primary .ui-widget-header, .bg-primary, .btn-primary, .btn-primary.disabled, .btn-primary[disabled], fieldset[disabled] .btn-primary, .btn-primary.disabled:hover, .btn-primary[disabled]:hover, fieldset[disabled] .btn-primary:hover, .btn-primary.disabled:focus, .btn-primary[disabled]:focus, fieldset[disabled] .btn-primary:focus, .btn-primary.disabled:active, .btn-primary[disabled]:active, fieldset[disabled] .btn-primary:active, .btn-primary.disabled.active, .btn-primary[disabled].active, fieldset[disabled] .btn-primary.active,
 .table > thead > tr > td.primary, .table > tbody > tr > td.primary, .table > tfoot > tr > td.primary, .table > thead > tr > th.primary, .table > tbody > tr > th.primary, .table > tfoot > tr > th.primary, .table > thead > tr.primary > td, .table > tbody > tr.primary > td, .table > tfoot > tr.primary > td, .table > thead > tr.primary > th, .table > tbody > tr.primary > th, .table > tfoot > tr.primary > th {
-  background-color: #6AA6D6;
+  background-color: #496A84;
   color: #f8f8f8;
-  border-color: #5a8db6;
+  border-color: #315D80;
 }
-.txt-primary {color: #6AA6D6;}
+.txt-primary {color: #496A84;}
 .progress-bar-success .ui-widget-header, .bg-success, .btn-success, .btn-success.disabled, .btn-success[disabled], fieldset[disabled] .btn-success, .btn-success.disabled:hover, .btn-success[disabled]:hover, fieldset[disabled] .btn-success:hover, .btn-success.disabled:focus, .btn-success[disabled]:focus, fieldset[disabled] .btn-success:focus, .btn-success.disabled:active, .btn-success[disabled]:active, fieldset[disabled] .btn-success:active, .btn-success.disabled.active, .btn-success[disabled].active, fieldset[disabled] .btn-success.active, .progress-bar-success,
 .table > thead > tr > td.success, .table > tbody > tr > td.success, .table > tfoot > tr > td.success, .table > thead > tr > th.success, .table > tbody > tr > th.success, .table > tfoot > tr > th.success, .table > thead > tr.success > td, .table > tbody > tr.success > td, .table > tfoot > tr.success > td, .table > thead > tr.success > th, .table > tbody > tr.success > th, .table > tfoot > tr.success > th {
-  background-color: #63CC9E;
+  background-color: #45837A;
   color: #f8f8f8;
-  border-color: #54ae86;
+  border-color: #34786E;
 }
-.txt-success, .has-success .help-block, .has-success .control-label, .has-success .radio, .has-success .checkbox, .has-success .radio-inline, .has-success .checkbox-inline {color: #63CC9E;}
-.has-success .form-control {border-color: #54ae86;}
+.txt-success, .has-success .help-block, .has-success .control-label, .has-success .radio, .has-success .checkbox, .has-success .radio-inline, .has-success .checkbox-inline {color: #45837A;}
+.has-success .form-control {border-color: #34786E;}
 .progress-bar-info .ui-widget-header, .bg-info, .btn-info, .btn-info.disabled, .btn-info[disabled], fieldset[disabled] .btn-info, .btn-info.disabled:hover, .btn-info[disabled]:hover, fieldset[disabled] .btn-info:hover, .btn-info.disabled:focus, .btn-info[disabled]:focus, fieldset[disabled] .btn-info:focus, .btn-info.disabled:active, .btn-info[disabled]:active, fieldset[disabled] .btn-info:active, .btn-info.disabled.active, .btn-info[disabled].active, fieldset[disabled] .btn-info.active, .progress-bar-info,
 .table > thead > tr > td.info, .table > tbody > tr > td.info, .table > tfoot > tr > td.info, .table > thead > tr > th.info, .table > tbody > tr > th.info, .table > tfoot > tr > th.info, .table > thead > tr.info > td, .table > tbody > tr.info > td, .table > tfoot > tr.info > td, .table > thead > tr.info > th, .table > tbody > tr.info > th, .table > tfoot > tr.info > th {
-  background-color: #7BC5D3;
+  background-color: #5D91BC;
   color: #f8f8f8;
-  border-color: #69a8b4;
+  border-color: #5783A8;
 }
-.txt-info {color: #7BC5D3;}
+.txt-info {color: #5D91BC;}
 .progress-bar-warning .ui-widget-header, .bg-warning, .btn-warning, .btn-warning.disabled, .btn-warning[disabled], fieldset[disabled] .btn-warning, .btn-warning.disabled:hover, .btn-warning[disabled]:hover, fieldset[disabled] .btn-warning:hover, .btn-warning.disabled:focus, .btn-warning[disabled]:focus, fieldset[disabled] .btn-warning:focus, .btn-warning.disabled:active, .btn-warning[disabled]:active, fieldset[disabled] .btn-warning:active, .btn-warning.disabled.active, .btn-warning[disabled].active, fieldset[disabled] .btn-warning.active, .progress-bar-warning,
 .table > thead > tr > td.warning, .table > tbody > tr > td.warning, .table > tfoot > tr > td.warning, .table > thead > tr > th.warning, .table > tbody > tr > th.warning, .table > tfoot > tr > th.warning, .table > thead > tr.warning > td, .table > tbody > tr.warning > td, .table > tfoot > tr.warning > td, .table > thead > tr.warning > th, .table > tbody > tr.warning > th, .table > tfoot > tr.warning > th {
-  background-color: #DFD271;
+  background-color: #9C9A78;
   color: #f8f8f8;
-  border-color: #beb360;
+  border-color: #8D8B61;
 }
-.txt-warning, .has-warning .help-block, .has-warning .control-label, .has-warning .radio, .has-warning .checkbox, .has-warning .radio-inline, .has-warning .checkbox-inline {color: #DFD271;}
-.has-warning .form-control {border-color: #beb360;}
+.txt-warning, .has-warning .help-block, .has-warning .control-label, .has-warning .radio, .has-warning .checkbox, .has-warning .radio-inline, .has-warning .checkbox-inline {color: #9C9A78;}
+.has-warning .form-control {border-color: #8D8B61;}
 .progress-bar-danger .ui-widget-header, .bg-danger, .btn-danger, .btn-danger.disabled, .btn-danger[disabled], fieldset[disabled] .btn-danger, .btn-danger.disabled:hover, .btn-danger[disabled]:hover, fieldset[disabled] .btn-danger:hover, .btn-danger.disabled:focus, .btn-danger[disabled]:focus, fieldset[disabled] .btn-danger:focus, .btn-danger.disabled:active, .btn-danger[disabled]:active, fieldset[disabled] .btn-danger:active, .btn-danger.disabled.active, .btn-danger[disabled].active, fieldset[disabled] .btn-danger.active, .progress-bar-danger,
 .table > thead > tr > td.danger, .table > tbody > tr > td.danger, .table > tfoot > tr > td.danger, .table > thead > tr > th.danger, .table > tbody > tr > th.danger, .table > tfoot > tr > th.danger, .table > thead > tr.danger > td, .table > tbody > tr.danger > td, .table > tfoot > tr.danger > td, .table > thead > tr.danger > th, .table > tbody > tr.danger > th, .table > tfoot > tr.danger > th {
-  background-color: #D15E5E;
-  border-color: #b25050;
+  background-color: #AA8383;
+  border-color: #A57171;
   color: #f8f8f8;
 }
-.txt-danger, .has-error .help-block, .has-error .control-label, .has-error .radio, .has-error .checkbox, .has-error .radio-inline, .has-error .checkbox-inline {color: #D15E5E;}
-.has-error .form-control {border-color: #b25050;}
+.txt-danger, .has-error .help-block, .has-error .control-label, .has-error .radio, .has-error .checkbox, .has-error .radio-inline, .has-error .checkbox-inline {color: #AA8383;}
+.has-error .form-control {border-color: #A57171;}
 .progress-bar .ui-state-default, .btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active, .open .dropdown-toggle.btn-default {
   color: #505559;
   background-color: #cecece;
@@ -880,47 +876,47 @@ ul.DTTT_dropdown.dropdown-menu > li:hover > a {
 .progress-bar-primary .ui-state-default, .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open .dropdown-toggle.btn-primary,
 .table-hover > tbody > tr > td.primary:hover, .table-hover > tbody > tr > th.primary:hover, .table-hover > tbody > tr.primary:hover > td, .table-hover > tbody > tr.primary:hover > th {
   color: #fff;
-  background-color: #5a8db6;
-  border-color: #5a8db6;
+  background-color: #42617A;
+  border-color: #315D80;
 }
 .progress-bar-success .ui-state-default, .btn-success:hover, .btn-success:focus, .btn-success:active, .btn-success.active, .open .dropdown-toggle.btn-success,
 .table-hover > tbody > tr > td.success:hover, .table-hover > tbody > tr > th.success:hover, .table-hover > tbody > tr.success:hover > td, .table-hover > tbody > tr.success:hover > th {
   color: #fff;
-  background-color: #54ae86;
-  border-color: #54ae86;
+  background-color: #3D776E;
+  border-color: #34786E;
 }
 .has-success .form-control:focus {
-  border-color: #54ae86;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #54ae86;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #54ae86;
+  border-color: #34786E;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #34786E;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #34786E;
 }
 .progress-bar-info .ui-state-default, .btn-info:hover, .btn-info:focus, .btn-info:active, .btn-info.active, .open .dropdown-toggle.btn-info,
 .table-hover > tbody > tr > td.info:hover, .table-hover > tbody > tr > th.info:hover, .table-hover > tbody > tr.info:hover > td, .table-hover > tbody > tr.info:hover > th {
   color: #fff;
-  background-color: #69a8b4;
-  border-color: #69a8b4;
+  background-color: #5384AD;
+  border-color: #5783A8;
 }
 .progress-bar-warning .ui-state-default, .btn-warning:hover, .btn-warning:focus, .btn-warning:active, .btn-warning.active, .open .dropdown-toggle.btn-warning,
 .table-hover > tbody > tr > td.warning:hover, .table-hover > tbody > tr > th.warning:hover, .table-hover > tbody > tr.warning:hover > td, .table-hover > tbody > tr.warning:hover > th {
   color: #fff;
-  background-color: #beb360;
-  border-color: #beb360;
+  background-color: #8F8D6C;
+  border-color: #8D8B61;
 }
 .has-warning .form-control:focus {
-  border-color: #beb360;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #beb360;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #beb360;
+  border-color: #8D8B61;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #8D8B61;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #8D8B61;
 }
 .progress-bar-danger .ui-state-default, .btn-danger:hover, .btn-danger:focus, .btn-danger:active, .btn-danger.active, .open .dropdown-toggle.btn-danger,
 .table-hover > tbody > tr > td.danger:hover, .table-hover > tbody > tr > th.danger:hover, .table-hover > tbody > tr.danger:hover > td, .table-hover > tbody > tr.danger:hover > th {
   color: #fff;
-  background-color: #b25050;
-  border-color: #b25050;
+  background-color: #9C7676;
+  border-color: #A57171;
 }
 .has-error .form-control:focus {
-  border-color: #b25050;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #b25050;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #b25050;
+  border-color: #A57171;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #A57171;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #A57171;
 }
 .slider-range-min-amount, .slider-range-max-amount, .slider-range-amount {
   border: 0;
@@ -1109,7 +1105,7 @@ ul.DTTT_dropdown.dropdown-menu > li:hover > a {
   margin-left: 0;
 }
 .toggle-switch input:checked + .toggle-switch-inner + .toggle-switch-switch {
-  right: 0px;
+  right: 0px; 
 }
 .toggle-switch-danger input:checked + .toggle-switch-inner + .toggle-switch-switch {
   border:2px solid #D15E5E;
@@ -1207,7 +1203,7 @@ ul.DTTT_dropdown.dropdown-menu > li:hover > a {
 #messages-menu {
   position:fixed;
   top:90px;
-  background:#436E90;
+  background:#353535;
   margin:0;
   height: 100%;
   z-index: 2;
@@ -1560,15 +1556,16 @@ ul.DTTT_dropdown.dropdown-menu > li:hover > a {
   -moz-border-radius: 0;
   border-radius: 0;
   outline:none;
-  background:#ebebeb;
-  color:#878787;
+  background:#505559;
+  color:#fff;
 }
 #dashboard_links .nav-pills > li.active {
   position: relative;
   margin: 0;
 }
 #dashboard_links .nav-pills > li.active > a, #dashboard_links .nav-pills > li.active > a:hover, #dashboard_links .nav-pills > li.active > a:focus, #dashboard_links .nav > li > a:hover, #dashboard_links .nav > li > a:focus {
-  background:#DBDBDB;
+  background:#45837A;
+  color:#fff;
 }
 #dashboard_links .nav-pills > li.active > a:before {
   font-family: FontAwesome;
@@ -1600,7 +1597,7 @@ ul.DTTT_dropdown.dropdown-menu > li:hover > a {
   font-weight: bold;
   color: #b25050;
 }
-.historical span {display: block;}
+.historical span {display:block;}
 .ow-server {
   padding-top: 8px;
   padding-bottom: 25px;
@@ -1764,9 +1761,9 @@ ul.DTTT_dropdown.dropdown-menu > li:hover > a {
 }
 .btn + .dropdown-menu {
   margin-top: -10px;
-  background: rgba(0, 0, 0, 0.7) !important; padding: 0; border: 0;
-  right: 0;
-  left: auto;
+  background: rgba(0, 0, 0, 0.7) !important; padding: 0; border: 0; 
+  right: 0; 
+  left: auto; 
   min-width: 100%;
 }
 .btn + .dropdown-menu > li > a {
@@ -2069,7 +2066,7 @@ ul.DTTT_dropdown.dropdown-menu > li:hover > a {
   position: absolute;
   left: 0px;
   width: 100%;
-  background: #436E90;
+  background: #353535;
   color:#f0f0f0;
   top: 0px;
   transition: 1s;
@@ -2077,8 +2074,10 @@ ul.DTTT_dropdown.dropdown-menu > li:hover > a {
   overflow: hidden;
   z-index: 9999;
 }
-.about-inner {padding:15px;}
-.about {color:#525252 !important;}
+.about-inner {
+  padding: 15px;
+}
+.about {color:#9C9A78 !important;}
 #about.about-h {height: 600px;}
 .style1 {width: 18px;
 height: 18px;
@@ -2142,7 +2141,7 @@ border-radius: 50%;}
 }
 #social a {
   margin:0 15px 0 0;
-  color:#f0f0f0;
+  color:#9C9A78;
   display: block;
   float: left;
 }
